--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -1,5 +1,7 @@
 .grid {
     width: 100%;
+    margin-top:10px;
+    margin-bottom:10px;
     @for $segment from 1 through $gridMax {
         &.grid-#{$segment} {
             column-count: $segment;
