--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -1,7 +1,7 @@
 .grid {
     width: 100%;
-    margin-top:10px;
-    margin-bottom:10px;
+    margin-top: $gutter-sm;
+    margin-bottom: $gutter-sm;
     @for $segment from 1 through $gridMax {
         &.grid-#{$segment} {
             column-count: $segment;
