--- a/src/main.scss
+++ b/src/main.scss
@@ -33,5 +33,5 @@
 body {    
     padding:0;
     margin:0;
-    background-color: map-get($colors, offWhite);
+    background-color: map-get($colors, white);
 }
